@@ -15,6 +15,8 @@ Summary of important user-visible changes for statistics 1.2.4:
 
  ** Rewrite of cmdscale for improved compatibility.
 
+ ** Fix in squareform for improved compatibility.
+
  ** The following functions are new:
  
     cdf dcov qrandn randsample signtest ttest ttest2 vartest vartest2 ztest
